--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ a {
   text-decoration: none;
 }
 
-button {
+body > div:first-child > button {
   position: fixed;
   top: 50px;
   right: 50px;
@@ -219,16 +219,14 @@ section.apple {
   padding: 10px;
 }
 
-article.b {
-  display: flex;
-  padding: 20px;
-}
-
 article.b > figure {
   flex: 1;
+  width: 30%;
   background: red;
-  height: 100px;
+  padding: 20px;
+  height: 200px;
   border-radius: 20px;
+  margin: 10px auto;
 }
 
 .progress {
@@ -249,6 +247,35 @@ div.top {
 }
 
 
+article.b > button a {
+  position: relative;
+  text-decoration: none;
+  margin: 0 12px;
+  padding: 0 12px;
+  text-align: center;
+}
+
+article.b >button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background: white;
+  height: 4vh;
+  overflow: hidden;
+  margin: 10px auto;
+  border: 0;
+}
+
+#barre {
+  position: absolute;
+  left: 0;
+  height: 5vh;
+  width: 0;
+  background: red;
+  bottom: -5px;
+  border-radius: 5px;
+  transition: 0.5s;
+}
 /* #container {
   height: 50px;
   width: 50px;
