--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,13 @@
 :root {
   --red: rgb(122, 29, 29);
   --typo: "Montserrat", sans-serif;
-  --degraded:rgb(2, 0, 36);
-  --degrade:linear-gradient(
+  --degraded: rgb(2, 0, 36);
+  --degrade: linear-gradient(
     90deg,
     rgba(2, 0, 36, 1) 0%,
     rgba(122, 29, 29, 1) 35%,
     rgb(18, 62, 71) 100%
-  ); 
+  );
 }
 
 header {
@@ -43,7 +43,7 @@ main > section:first-child > article {
   position: relative;
 }
 
-section:first-child > article :is(h3,p) {
+section:first-child > article :is(h3, p) {
   margin: 10px;
 }
 
@@ -106,11 +106,11 @@ body > div:first-child > button {
   gap: 60px;
 }
 
-.nav-branding{
+.nav-branding {
   font-size: 2rem;
 }
 
-.nav-link{
+.nav-link {
   transform: 0.7s ease;
   color: yellow;
 }
@@ -129,15 +129,14 @@ body > div:first-child > button {
   width: 25px;
   height: 3px;
   margin: 5px auto;
-  -webkit-transition:  all 0.3 ease-in-out;
-  transition:  all 0.3 ease-in-out;
+  -webkit-transition: all 0.3 ease-in-out;
+  transition: all 0.3 ease-in-out;
   background: black;
 }
 
-
 .fa-heart {
   color: white;
-  margin-top:  15px;
+  margin-top: 15px;
   margin-left: 12px;
 }
 
@@ -146,14 +145,15 @@ body > div:first-child > button {
   cursor: pointer;
 }
 
-main>section:nth-child(2) {
+main > section:nth-child(2) {
   background: var(--degraded) var(--degrade);
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
 
-article.h, article.b {
+article.h,
+article.b {
   width: 100%;
   border: 1px solid black;
   border: 1px solid white;
@@ -163,7 +163,7 @@ article.h, article.b {
 
 article.h {
   top: 10px;
-  background: rgba(255, 255, 255, .30);
+  background: rgba(255, 255, 255, 0.3);
   min-height: 800px;
   display: flex;
   align-items: center;
@@ -178,7 +178,7 @@ article.h > figure {
 article.h > a {
   display: block;
   text-align: center;
-  background: rgba(255, 255, 255, .8);
+  background: rgba(255, 255, 255, 0.8);
   color: gray;
   border-radius: 30px;
   border: 1px solid white;
@@ -191,9 +191,9 @@ article.h > h2 {
   margin: 10px 0;
 }
 
-article.b{
+article.b {
   top: -390px;
-  background: rgba(255, 255, 255, .50);
+  background: rgba(255, 255, 255, 0.5);
   min-height: 400px;
 }
 
@@ -248,7 +248,6 @@ div.top {
   flex: 1;
 }
 
-
 article.b > button a {
   position: relative;
   text-decoration: none;
@@ -257,7 +256,7 @@ article.b > button a {
   text-align: center;
 }
 
-article.b >button {
+article.b > button {
   position: relative;
   display: flex;
   align-items: center;
@@ -284,15 +283,12 @@ article.b >button {
   background: blue;
 } */
 
-
 @media screen and (min-width: 768px) {
-
   main {
     width: 80%;
     background: white;
     margin: auto;
   }
-
 
   header + section {
     background: var(--degraded) var(--degrade);
@@ -336,34 +332,33 @@ article.b >button {
     margin-bottom: 2vh;
     font-weight: 100;
   }
-  
+
   h1,
   h2 {
     font-family: var(--typo);
     color: yellow;
   }
-  
+
   #en {
     font-weight: 500;
     border-bottom: solid 5px black;
   }
-  
+
   #seine {
     font-weight: 700;
     border-bottom: solid 5px black;
   }
-  
 }
 
 @media screen and (max-width: 767px) {
-
   main {
     width: 100%;
     background: yellow;
     padding: 0 5px;
   }
 
-  body, header {
+  body,
+  header {
     background: yellow;
   }
 
@@ -387,13 +382,12 @@ article.b >button {
     display: none;
   }
 
-  .nav-link{
+  .nav-link {
     font-size: 40px;
     font-weight: bold;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
     color: white;
   }
-
 
   hgroup {
     width: 80%;
@@ -404,50 +398,47 @@ article.b >button {
     display: block;
     width: 90px;
   }
-  
+
   h1 {
     font-size: 50px;
     margin-bottom: 2vh;
     font-weight: 100;
   }
-  
+
   h1,
   h2 {
     font-family: var(--typo);
     color: white;
     text-align: center;
   }
-  
+
   #en {
     font-weight: 500;
     border-bottom: solid 5px yellow;
   }
-  
+
   #seine {
     font-weight: 700;
     border-bottom: solid 5px yellow;
   }
-  
 
-
-
-  .hamburger{
+  .hamburger {
     display: block;
-}
+  }
 
-.hamburger.active .bar:nth-child(2){
+  .hamburger.active .bar:nth-child(2) {
     opacity: 0;
-}
+  }
 
-.hamburger.active .bar:nth-child(1){
+  .hamburger.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
-}
+  }
 
-.hamburger.active .bar:nth-child(3){
+  .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
-}
+  }
 
-.nav-menu {
+  .nav-menu {
     position: fixed;
     left: -100%;
     top: 95px;
@@ -458,18 +449,18 @@ article.b >button {
     height: 85vh;
     text-align: center;
     transition: 0.3s;
-}
+  }
 
-.nav-item {
+  .nav-item {
     margin: 16px 0;
-}
+  }
 
-.nav-menu.active {
+  .nav-menu.active {
     left: 0;
-}
+  }
 }
 
-#modal:not(:target) {
+#modal {
   background: red;
   position: fixed;
   bottom: 0;
@@ -477,4 +468,11 @@ article.b >button {
   width: 100%;
 }
 
-#modal:target {display: none;}
+#modal:not(:target) {
+  display: block;
+  transition: 0.5 linear;
+}
+
+#modal:target {
+  display: none;
+}
